Setup analyzer-web project

--- a/internal/analyzer/api/templates/index.html
+++ b/internal/analyzer/api/templates/index.html
@@ -2,12 +2,12 @@
 
 <head>
   <link rel="stylesheet" href="/assets/main.css">
-  <script src="/assets/main.js"></script>
+  <script src="/assets/index.js"></script>
 </head>
 
 <body>
   <div id="content">
-    <h1>Data Viewer!!!</h1>
+    <h1>Data Viewer!</h1>
   </div>
 </body>
 
