Render first graph

--- a/internal/analyzer/api/templates/index.html
+++ b/internal/analyzer/api/templates/index.html
@@ -8,6 +8,10 @@
 <body>
   <div id="content">
     <h1>Data Viewer!</h1>
+
+    <div id="graph-content">
+      <canvas id="graph"></canvas>
+    </div>
   </div>
 </body>
 
