--- a/internal/tower/api/templates/index.html
+++ b/internal/tower/api/templates/index.html
@@ -12,6 +12,11 @@
     <div id="graph-content">
       <canvas id="graph"></canvas>
     </div>
+
+    <div id="3d-content">
+      <canvas id="3d"></canvas>
+    </div>
   </div>
 </body>
+
 </html>
