Add graphs dynamically

--- a/internal/tower/api/assets/main.css
+++ b/internal/tower/api/assets/main.css
@@ -1,3 +1,15 @@
 #content {
   width: 100%;
 }
+
+#graph-content {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+#graph-content canvas {
+  max-width: 45%;
+  height: auto !important;
+}
