Implement proper resizing for Three.js canvas

--- a/internal/tower/api/templates/index.html
+++ b/internal/tower/api/templates/index.html
@@ -7,13 +7,13 @@
 
 <body>
   <div id="content">
-    <h1>Data Viewer!</h1>
 
     <div id="graph-content">
-      <canvas id="3d"></canvas>
-    </div>
+      <div id="container-3d">
+        </dib>
+      </div>
 
-  </div>
+    </div>
 </body>
 
 </html>
