--- a/internal/tower/api/assets/main.css
+++ b/internal/tower/api/assets/main.css
@@ -9,7 +9,13 @@
   justify-content: space-between;
 }
 
-#graph-content canvas {
+#graph-content>canvas,
+#container-3d {
   max-width: 45%;
-  height: auto !important;
+  width: 45%;
+}
+
+#container-3d canvas {
+  width: 100%;
+  height: 100%;
 }
